[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nodetool-lib-image"
version = "0.6.0"
description = "Nodetool Image nodes"
readme = "README.md"
authors = ["Matthias Georgi <matti.georgi@gmail.com>"]
packages = [{ include = "nodetool", from = "src" }]
package-mode = true
repository = "https://github.com/nodetool-ai/nodetool-lib-image"
include = [
    "src/nodetool/package_metadata/nodetool-lib-image.json",
    "src/nodetool/assets/nodetool-lib-image/Image Enhance.jpg",
]

[tool.poetry.dependencies]
python = "^3.11"
nodetool-core = { git = "https://github.com/nodetool-ai/nodetool-core.git", rev = "main" }

cairosvg = "2.7.1"
