[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-lib-image"
version = "0.6.0"
description = "Nodetool Image nodes"
readme = "README.md"
authors = [{ name = "Matthias Georgi", email = "matti.georgi@gmail.com" }]
requires-python = ">=3.11"

dependencies = ["nodetool-core>=0.6.0,<0.7.0", "cairosvg==2.7.1"]


[project.optional-dependencies]
# For exact version pinning in production
stable = ["nodetool-core==0.6.0"]

[tool.hatch.metadata]

[tool.hatch.build.targets.wheel]
packages = ["src/nodetool"]
artifacts = [
    "src/nodetool/package_metadata/nodetool-lib-image.json",
    "src/nodetool/assets/nodetool-lib-image/Image Enhance.jpg",
]
